Use liquid date function instead of providing own

--- a/create-class/template.h.liquid
+++ b/create-class/template.h.liquid
@@ -2,7 +2,7 @@
  * Unauthorized copying of this file, via any medium is strictly prohibited
  * Proprietary and confidential
  * Author: {{name}} <{{email}}>
- * Created: {{date}}
+ * Created: {{ "now" | date: "%Y-%m-%d" }}
  */
 
 #pragma once
