Update templates to reflect new namespace system

--- a/create-class/template.cpp.liquid
+++ b/create-class/template.cpp.liquid
@@ -8,5 +8,5 @@
 #include "{{fileName}}.h"
 
 using namespace grm;{% if namespace != 'grm' %}
-using namespace {{namespace}};
+using namespace grm::{{namespace}};
 {% endif %}
