--- a/create-class/template.h.liquid
+++ b/create-class/template.h.liquid
@@ -7,12 +7,13 @@
 
 #pragma once
 
-namespace {{namespace}} {
 {% if namespace != 'grm' %}
-using namespace grm;
+namespace grm::{{namespace}} {
+{% else %}
+namespace grm {
 {% endif %}
 struct {{className}} {
 
 };
 
-}  // namespace {{namespace}}
+}  // namespace grm::{{namespace}}
