--- a/create-class/template.cpp.liquid
+++ b/create-class/template.cpp.liquid
@@ -7,6 +7,6 @@
 
 #include "{{fileName}}.h"
 
-using namespace grm;{% if namespace != 'grm' %}
-using namespace grm::{{namespace}};
+{% if namespace == 'grm' %}using namespace grm;
+{% else %}using namespace grm::{{namespace}};
 {% endif %}
